# mathlib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  dispatch-downstream.yml
include/mathlib/: mathlib.h
src/: mathlib.cpp
tests/: CMakeLists.txt  test_mathlib.cpp
